[gd_scene load_steps=13 format=2]

[ext_resource path="res://tilemap/walls3.tres" type="TileSet" id=1]
[ext_resource path="res://tilemap/rocks1.tres" type="TileSet" id=2]
[ext_resource path="res://tilemap/gates4.tres" type="TileSet" id=3]
[ext_resource path="res://tilemap/floor.tres" type="TileSet" id=4]
[ext_resource path="res://gate/gate.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/Level.gd" type="Script" id=6]
[ext_resource path="res://gate/gate.gd" type="Script" id=7]
[ext_resource path="res://tilemap/Gate_Boss_Open_Icon.png" type="Texture" id=8]
[ext_resource path="res://tilemap/Gate_Loot_Icon.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.25, 27 )

[sub_resource type="TileSet" id=3]
0/name = "Gate_Boss_Open_Icon.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "Gate_Loot_Icon.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Level8" type="Node2D"]
script = ExtResource( 6 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 131074, -1610612736, 0, 131075, -1610612736, 0, 131076, -1610612736, 0, 131077, -1610612736, 0, 131078, -1610612736, 0, 131079, -1610612736, 0, 131080, -1610612736, 0, 131081, 8, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 1610612744, 0, 131094, -1610612736, 0, 131095, -1610612736, 0, 131096, -1610612736, 0, 131097, -1610612736, 0, 131098, -1610612736, 0, 131099, -1610612736, 0, 196610, -1610612736, 0, 196611, -1610612736, 0, 196612, -1610612736, 0, 196613, -1610612736, 0, 196614, -1610612736, 0, 196615, -1610612736, 0, 196616, -1610612736, 0, 196617, 8, 0, 196618, 13, 0, 196619, 11, 0, 196620, 11, 0, 196621, 11, 0, 196622, 11, 0, 196623, 11, 0, 196624, 11, 0, 196625, 11, 0, 196626, 11, 0, 196627, 14, 0, 196628, 1610612744, 0, 196629, 1610612741, 0, 196630, -1610612736, 0, 196631, -1610612736, 0, 196632, -1610612736, 0, 196633, 1610612738, 0, 196634, -1610612736, 0, 196635, -1610612736, 0, 262146, -1610612736, 0, 262147, -1610612736, 0, 262148, -1610612736, 0, 262149, -1610612736, 0, 262150, -1610612736, 0, 262151, -1610612736, 0, 262152, -1610612736, 0, 262153, 8, 0, 262154, 12, 0, 262155, 11, 0, 262156, 11, 0, 262157, 11, 0, 262158, 11, 0, 262159, 11, 0, 262160, 11, 0, 262161, 11, 0, 262162, 11, 0, 262163, 12, 0, 262164, 1610612744, 0, 262165, -1610612736, 0, 262166, -1610612736, 0, 262167, -1610612736, 0, 262168, -1610612736, 0, 262169, -1610612736, 0, 262170, -1610612736, 0, 262171, -1610612736, 0, 327682, -1610612736, 0, 327683, -1610612736, 0, 327684, -1610612736, 0, 327685, -1610612736, 0, 327686, -1610612736, 0, 327687, -1610612736, 0, 327688, -1610612736, 0, 327689, 1610612741, 0, 327690, 8, 0, 327691, 12, 0, 327692, 11, 0, 327693, 11, 0, 327694, 11, 0, 327695, 11, 0, 327696, 11, 0, 327697, 11, 0, 327698, 14, 0, 327699, 1610612744, 0, 327700, 1610612741, 0, 327701, -1610612736, 0, 327702, -1610612736, 0, 327703, -1610612736, 0, 327704, -1610612736, 0, 327705, -1610612736, 0, 327706, -1610612736, 0, 327707, -1610612736, 0, 393218, 17, 0, 393219, -1610612736, 0, 393220, 1610612738, 0, 393221, -1610612736, 0, 393222, -1610612736, 0, 393223, 3, 0, 393224, 1610612738, 0, 393225, -1610612736, 0, 393226, 1610612741, 0, 393227, 8, 0, 393228, 13, 0, 393229, 11, 0, 393230, 11, 0, 393231, 11, 0, 393232, 11, 0, 393233, 11, 0, 393234, 14, 0, 393235, 1610612744, 0, 393236, -1610612736, 0, 393237, -1610612736, 0, 393238, -1610612736, 0, 393239, 2, 0, 393240, -1610612736, 0, 393241, -1610612736, 0, 393242, -1610612736, 0, 393243, -1610612736, 0, 458754, -1610612736, 0, 458755, -1610612736, 0, 458756, 15, 0, 458757, -1610612736, 0, 458758, -1610612736, 0, 458759, -1610612736, 0, 458760, -1610612736, 0, 458761, -1610612736, 0, 458762, -1610612736, 0, 458763, 8, 0, 458764, 12, 0, 458765, 11, 0, 458766, 11, 0, 458767, 11, 0, 458768, 11, 0, 458769, 11, 0, 458770, 12, 0, 458771, 1610612744, 0, 458772, -1610612736, 0, 458773, -1610612736, 0, 458774, -1610612736, 0, 458775, 2, 0, 458776, 2, 0, 458777, -1610612736, 0, 458778, -1610612736, 0, 458779, -1610612736, 0, 524290, -1610612736, 0, 524291, -1610612736, 0, 524292, -1610612736, 0, 524293, 3, 0, 524294, -1610612736, 0, 524295, -1610612736, 0, 524296, -1610612736, 0, 524297, -1610612736, 0, 524298, -1610612736, 0, 524299, 1610612741, 0, 524300, 8, 0, 524301, 13, 0, 524302, 11, 0, 524303, 11, 0, 524304, 11, 0, 524305, 14, 0, 524306, 1610612744, 0, 524307, 1610612741, 0, 524308, -1610612736, 0, 524309, -1610612736, 0, 524310, -1610612736, 0, 524311, -1610612736, 0, 524312, -1610612736, 0, 524313, -1610612736, 0, 524314, -1610612736, 0, 524315, -1610612736, 0, 589826, 1610612738, 0, 589827, -1610612736, 0, 589828, 17, 0, 589829, -1610612736, 0, 589830, -1610612736, 0, 589831, -1610612736, 0, 589832, -1610612736, 0, 589833, -1610612736, 0, 589834, -1610612736, 0, 589835, -1610612736, 0, 589836, 8, 0, 589837, 12, 0, 589838, 12, 0, 589839, 12, 0, 589840, 12, 0, 589841, 12, 0, 589842, 1610612744, 0, 589843, -1610612736, 0, 589844, -1610612736, 0, 589845, -1610612736, 0, 589846, 1, 0, 589847, 3, 0, 589848, -1610612736, 0, 589849, -1610612736, 0, 589850, -1610612736, 0, 589851, -1610612736, 0, 655362, -1610612736, 0, 655363, -1610612736, 0, 655364, -1610612736, 0, 655365, -1610612736, 0, 655366, 15, 0, 655367, 2, 0, 655368, -1610612736, 0, 655369, 17, 0, 655370, 1610612739, 0, 655371, -1610612736, 0, 655372, 1610612741, 0, 655373, 10, 0, 655374, 10, 0, 655375, 10, 0, 655376, 10, 0, 655377, 10, 0, 655378, 1610612741, 0, 655379, -1610612736, 0, 655380, -1610612736, 0, 655381, -1610612736, 0, 655382, -1610612736, 0, 655383, -1610612736, 0, 655384, -1610612736, 0, 655385, -1610612736, 0, 655386, -1610612736, 0, 655387, -1610612736, 0, 720898, -1610612736, 0, 720899, -1610612736, 0, 720900, -1610612736, 0, 720901, -1610612736, 0, 720902, -1610612736, 0, 720903, -1610612736, 0, 720904, -1610612736, 0, 720905, -1610612736, 0, 720906, -1610612736, 0, 720907, -1610612736, 0, 720908, -1610612736, 0, 720909, -1610612736, 0, 720910, -1610612736, 0, 720911, -1610612736, 0, 720912, -1610612736, 0, 720913, -1610612736, 0, 720914, -1610612736, 0, 720915, -1610612736, 0, 720916, -1610612736, 0, 720917, -1610612736, 0, 720918, -1610612736, 0, 720919, -1610612736, 0, 720920, -1610612736, 0, 720921, -1610612736, 0, 720922, 1610612738, 0, 720923, 1610612738, 0, 786434, -1610612736, 0, 786435, -1610612736, 0, 786436, -1610612736, 0, 786437, 18, 0, 786438, -1610612736, 0, 786439, 15, 0, 786440, 17, 0, 786441, -1610612736, 0, 786442, 1610612738, 0, 786443, -1610612736, 0, 786444, -1610612736, 0, 786445, -1610612736, 0, 786446, -1610612736, 0, 786447, -1610612736, 0, 786448, -1610612736, 0, 786449, -1610612736, 0, 786450, -1610612736, 0, 786451, -1610612736, 0, 786452, 1610612738, 0, 786453, -1610612736, 0, 786454, -1610612736, 0, 786455, -1610612736, 0, 786456, -1610612736, 0, 786457, -1610612736, 0, 786458, -1610612736, 0, 786459, -1610612736, 0, 851970, -1610612736, 0, 851971, -1610612736, 0, 851972, -1610612736, 0, 851973, -1610612736, 0, 851974, -1610612736, 0, 851975, -1610612736, 0, 851976, -1610612736, 0, 851977, -1610612736, 0, 851978, 1610612738, 0, 851979, -1610612736, 0, 851980, -1610612736, 0, 851981, -1610612736, 0, 851982, -1610612736, 0, 851983, -1610612736, 0, 851984, -1610612736, 0, 851985, -1610612736, 0, 851986, 1610612739, 0, 851987, -1610612736, 0, 851988, 1610612738, 0, 851989, -1610612736, 0, 851990, -1610612736, 0, 851991, 1610612739, 0, 851992, -1610612736, 0, 851993, -1610612736, 0, 851994, -1610612736, 0, 851995, -1610612736, 0, 917506, -1610612736, 0, 917507, -1610612736, 0, 917508, -1610612736, 0, 917509, -1610612736, 0, 917510, -1610612736, 0, 917511, -1610612736, 0, 917512, 17, 0, 917513, 16, 0, 917514, 2, 0, 917515, -1610612736, 0, 917516, 18, 0, 917517, -1610612736, 0, 917518, -1610612736, 0, 917519, -1610612736, 0, 917520, 3, 0, 917521, -1610612736, 0, 917522, -1610612736, 0, 917523, -1610612736, 0, 917524, 1610612739, 0, 917525, -1610612736, 0, 917526, 2, 0, 917527, -1610612736, 0, 917528, -1610612736, 0, 917529, -1610612736, 0, 917530, -1610612736, 0, 917531, -1610612736, 0, 983042, -1610612736, 0, 983043, 2, 0, 983044, -1610612736, 0, 983045, -1610612736, 0, 983046, -1610612736, 0, 983047, -1610612736, 0, 983048, -1610612736, 0, 983049, 18, 0, 983050, -1610612736, 0, 983051, -1610612736, 0, 983052, -1610612736, 0, 983053, 3, 0, 983054, 3, 0, 983055, -1610612736, 0, 983056, 3, 0, 983057, -1610612736, 0, 983058, -1610612736, 0, 983059, 1610612739, 0, 983060, -1610612736, 0, 983061, -1610612736, 0, 983062, 2, 0, 983063, -1610612736, 0, 983064, -1610612736, 0, 983065, -1610612736, 0, 983066, -1610612736, 0, 983067, -1610612736, 0, 1048578, -1610612736, 0, 1048579, -1610612736, 0, 1048580, -1610612736, 0, 1048581, -1610612736, 0, 1048582, -1610612736, 0, 1048583, -1610612736, 0, 1048584, 1610612738, 0, 1048585, -1610612736, 0, 1048586, -1610612736, 0, 1048587, -1610612736, 0, 1048588, -1610612736, 0, 1048589, -1610612736, 0, 1048590, -1610612736, 0, 1048591, -1610612736, 0, 1048592, -1610612736, 0, 1048593, -1610612736, 0, 1048594, -1610612736, 0, 1048595, -1610612736, 0, 1048596, -1610612736, 0, 1048597, -1610612736, 0, 1048598, -1610612736, 0, 1048599, -1610612736, 0, 1048600, -1610612736, 0, 1048601, -1610612736, 0, 1048602, -1610612736, 0, 1048603, -1610612736, 0, 1114114, -1610612736, 0, 1114115, -1610612736, 0, 1114116, 1610612739, 0, 1114117, -1610612736, 0, 1114118, -1610612736, 0, 1114119, -1610612736, 0, 1114120, -1610612736, 0, 1114121, -1610612736, 0, 1114122, -1610612736, 0, 1114123, -1610612736, 0, 1114124, -1610612736, 0, 1114125, -1610612736, 0, 1114126, -1610612736, 0, 1114127, -1610612736, 0, 1114128, -1610612736, 0, 1114129, -1610612736, 0, 1114130, -1610612736, 0, 1114131, -1610612736, 0, 1114132, -1610612736, 0, 1114133, -1610612736, 0, 1114134, -1610612736, 0, 1114135, -1610612736, 0, 1114136, -1610612736, 0, 1114137, -1610612736, 0, 1114138, 1610612738, 0, 1114139, -1610612736, 0 )

[node name="Stones" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 393248, 1, 0, 589913, 8, 0, 655462, 3, 0, 655466, 7, 0, 720919, 0, 0, 786531, 3, 0, 786536, 1, 0, 851981, 1, 0, 852023, 2, 0, 917605, 3, 0, 917609, 8, 0, 983064, 3, 0, 983119, 8, 0, 983139, 3, 0, 983145, 9, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, -1073741823, 0, 1, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 13, 2, 0, 14, 1, 0, 65536, -1073741822, 0, 65550, -1610612734, 0, 131072, -1073741822, 0, 131086, -1610612734, 0, 196608, -1073741822, 0, 196622, -1610612734, 0, 262144, -1073741822, 0, 262158, -1610612734, 0, 327680, -1073741822, 0, 327694, -1610612734, 0, 393216, -1073741822, 0, 393230, -1610612734, 0, 458752, -1073741822, 0, 458766, -1610612734, 0, 524288, -1073741822, 0, 524302, -1610612734, 0, 589824, 1610612737, 0, 589825, 1610612738, 0, 589826, 1610612738, 0, 589827, 1610612738, 0, 589828, 1610612738, 0, 589829, 1610612738, 0, 589830, 1610612738, 0, 589832, 1610612738, 0, 589833, 1610612738, 0, 589834, 1610612738, 0, 589835, 1610612738, 0, 589836, 1610612738, 0, 589837, 1610612738, 0, 589838, -1610612735, 0 )

[node name="Gates_closed" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 64 )
format = 1
tile_data = PoolIntArray( 7, 0, 0, 47, 0, 0, 589851, 1610612736, 0 )

[node name="Gates_open" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 64 )
format = 1
tile_data = PoolIntArray( 7, 1, 0, 47, 1, 0 )

[node name="Gate" parent="." instance=ExtResource( 5 )]
position = Vector2( 108, -2 )

[node name="Gate_right" type="Area2D" parent="."]
position = Vector2( 742, -20 )
script = ExtResource( 7 )

[node name="GateCollision" type="CollisionShape2D" parent="Gate_right"]
position = Vector2( 58, 60 )
shape = SubResource( 4 )

[node name="BossOpen" type="TileMap" parent="Gate_right"]
visible = false
position = Vector2( 10, 20 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="LootOpen" type="TileMap" parent="Gate_right"]
visible = false
position = Vector2( 10, 20 )
tile_set = SubResource( 5 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="LevelCompleted" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 24.0

[node name="River_collision" type="Area2D" parent="."]

[node name="Lake" type="CollisionPolygon2D" parent="River_collision"]
position = Vector2( 1.52588e-05, -1.3375 )
scale = Vector2( 1, 0.895508 )
polygon = PoolVector2Array( 320, 64, 320, 160, 352, 160, 352, 192, 384, 192, 384, 256, 416, 256, 416, 320, 576, 320, 576, 256, 608, 256, 608, 160, 640, 160, 640, 96, 672, 96, 672, 64 )
disabled = true

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 478, 539 )

[connection signal="body_entered" from="Gate" to="Gate" method="_on_Gate_body_entered"]
[connection signal="gate_opens" from="Gate" to="." method="_on_gate_opens"]
[connection signal="body_entered" from="Gate_right" to="Gate_right" method="_on_Gate_body_entered"]
[connection signal="pressed" from="LevelCompleted" to="Gate" method="_on_LevelCompleted_pressed"]
[connection signal="body_entered" from="River_collision" to="." method="_on_River_collision_body_entered"]
