[gd_scene load_steps=8 format=2]

[ext_resource path="res://tilemap/rocks1.tres" type="TileSet" id=1]
[ext_resource path="res://tilemap/gates4.tres" type="TileSet" id=2]
[ext_resource path="res://tilemap/walls3.tres" type="TileSet" id=3]
[ext_resource path="res://tilemap/floor.tres" type="TileSet" id=4]
[ext_resource path="res://gate/gate.gd" type="Script" id=5]
[ext_resource path="res://levels/Level.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 30.5 )

[node name="LevelStart" type="Node2D"]
script = ExtResource( 6 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 64, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 20, 0, 1, 20, 0, 2, 20, 0, 3, 20, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 20, 0, 27, 20, 0, 28, 20, 0, 29, 20, 0, 65536, 20, 0, 65537, 20, 0, 65538, 22, 0, 65539, 20, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 20, 0, 65563, 20, 0, 65564, 20, 0, 65565, 22, 0, 131072, 20, 0, 131073, 20, 0, 131074, 20, 0, 131075, 20, 0, 131076, 11, 0, 131077, 11, 0, 131078, 11, 0, 131079, 11, 0, 131080, 11, 0, 131081, 11, 0, 131082, 1610612745, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 15, 0, 131089, 15, 0, 131090, 1, 0, 131091, 9, 0, 131092, 11, 0, 131093, 11, 0, 131094, 11, 0, 131095, 11, 0, 131096, 11, 0, 131097, 11, 0, 131098, 20, 0, 131099, 21, 0, 131100, 20, 0, 131101, 20, 0, 196608, 20, 0, 196609, 20, 0, 196610, 20, 0, 196611, 20, 0, 196612, 11, 0, 196613, 11, 0, 196614, 11, 0, 196615, 11, 0, 196616, 11, 0, 196617, 11, 0, 196618, 1610612745, 0, 196619, 0, 0, 196620, 16, 0, 196621, 16, 0, 196622, 3, 0, 196623, 3, 0, 196624, 15, 0, 196625, 1, 0, 196626, 1, 0, 196627, 9, 0, 196628, 11, 0, 196629, 11, 0, 196630, 11, 0, 196631, 11, 0, 196632, 11, 0, 196633, 11, 0, 196634, 20, 0, 196635, 20, 0, 196636, 20, 0, 196637, 20, 0, 262144, 20, 0, 262145, 20, 0, 262146, 20, 0, 262147, 20, 0, 262148, 11, 0, 262149, 11, 0, 262150, 11, 0, 262151, 11, 0, 262152, 11, 0, 262153, 11, 0, 262154, 11, 0, 262155, 1610612745, 0, 262156, 0, 0, 262157, 0, 0, 262158, 18, 0, 262159, 3, 0, 262160, 1, 0, 262161, 1, 0, 262162, 9, 0, 262163, 11, 0, 262164, 11, 0, 262165, 11, 0, 262166, 11, 0, 262167, 11, 0, 262168, 11, 0, 262169, 11, 0, 262170, 20, 0, 262171, 20, 0, 262172, 20, 0, 262173, 20, 0, 327680, 22, 0, 327681, 20, 0, 327682, 21, 0, 327683, 20, 0, 327684, 11, 0, 327685, 11, 0, 327686, 11, 0, 327687, 11, 0, 327688, 11, 0, 327689, 11, 0, 327690, 11, 0, 327691, 11, 0, 327692, 1610612745, 0, 327693, 0, 0, 327694, 0, 0, 327695, 17, 0, 327696, 0, 0, 327697, 9, 0, 327698, 11, 0, 327699, 11, 0, 327700, 11, 0, 327701, 11, 0, 327702, 11, 0, 327703, 11, 0, 327704, 11, 0, 327705, 11, 0, 327706, 20, 0, 327707, 20, 0, 327708, 21, 0, 327709, 20, 0, 393216, 20, 0, 393217, 20, 0, 393218, 20, 0, 393219, 20, 0, 393220, 11, 0, 393221, 11, 0, 393222, 11, 0, 393223, 11, 0, 393224, 11, 0, 393225, 11, 0, 393226, 11, 0, 393227, 11, 0, 393228, 1610612745, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 9, 0, 393234, 11, 0, 393235, 11, 0, 393236, 11, 0, 393237, 11, 0, 393238, 11, 0, 393239, 11, 0, 393240, 11, 0, 393241, 11, 0, 393242, 20, 0, 393243, 20, 0, 393244, 22, 0, 393245, 20, 0, 458752, 20, 0, 458753, 21, 0, 458754, 20, 0, 458755, 20, 0, 458756, 11, 0, 458757, 11, 0, 458758, 11, 0, 458759, 11, 0, 458760, 11, 0, 458761, 11, 0, 458762, 11, 0, 458763, 1610612745, 0, 458764, 1, 0, 458765, 15, 0, 458766, 3, 0, 458767, 0, 0, 458768, 16, 0, 458769, 0, 0, 458770, 9, 0, 458771, 11, 0, 458772, 11, 0, 458773, 11, 0, 458774, 11, 0, 458775, 11, 0, 458776, 11, 0, 458777, 11, 0, 458778, 20, 0, 458779, 20, 0, 458780, 20, 0, 458781, 20, 0, 524288, 20, 0, 524289, 20, 0, 524290, 20, 0, 524291, 20, 0, 524292, 11, 0, 524293, 11, 0, 524294, 11, 0, 524295, 11, 0, 524296, 11, 0, 524297, 11, 0, 524298, 1610612745, 0, 524299, 0, 0, 524300, 1, 0, 524301, 0, 0, 524302, 3, 0, 524303, 16, 0, 524304, 2, 0, 524305, 0, 0, 524306, 0, 0, 524307, 9, 0, 524308, 11, 0, 524309, 11, 0, 524310, 11, 0, 524311, 11, 0, 524312, 11, 0, 524313, 11, 0, 524314, 20, 0, 524315, 20, 0, 524316, 20, 0, 524317, 20, 0, 589824, 20, 0, 589825, 20, 0, 589826, 20, 0, 589827, 20, 0, 589828, 11, 0, 589829, 11, 0, 589830, 11, 0, 589831, 11, 0, 589832, 11, 0, 589833, 11, 0, 589834, 1610612745, 0, 589835, 0, 0, 589836, 1, 0, 589837, 3, 0, 589838, 3, 0, 589839, 16, 0, 589840, 2, 0, 589841, 0, 0, 589842, 0, 0, 589843, 9, 0, 589844, 11, 0, 589845, 11, 0, 589846, 11, 0, 589847, 11, 0, 589848, 11, 0, 589849, 11, 0, 589850, 21, 0, 589851, 20, 0, 589852, 20, 0, 589853, 20, 0, 655360, 20, 0, 655361, 20, 0, 655362, 20, 0, 655363, 22, 0, 655364, 11, 0, 655365, 11, 0, 655366, 11, 0, 655367, 11, 0, 655368, 11, 0, 655369, 11, 0, 655370, 11, 0, 655371, 1610612745, 0, 655372, 0, 0, 655373, 3, 0, 655374, 0, 0, 655375, 18, 0, 655376, 0, 0, 655377, 0, 0, 655378, 9, 0, 655379, 11, 0, 655380, 11, 0, 655381, 11, 0, 655382, 11, 0, 655383, 11, 0, 655384, 11, 0, 655385, 11, 0, 655386, 22, 0, 655387, 20, 0, 655388, 20, 0, 655389, 20, 0, 720896, 20, 0, 720897, 20, 0, 720898, 21, 0, 720899, 20, 0, 720900, 11, 0, 720901, 11, 0, 720902, 11, 0, 720903, 11, 0, 720904, 11, 0, 720905, 11, 0, 720906, 11, 0, 720907, 11, 0, 720908, 1610612745, 0, 720909, 0, 0, 720910, 15, 0, 720911, 2, 0, 720912, 18, 0, 720913, 9, 0, 720914, 11, 0, 720915, 11, 0, 720916, 11, 0, 720917, 11, 0, 720918, 11, 0, 720919, 11, 0, 720920, 11, 0, 720921, 11, 0, 720922, 20, 0, 720923, 20, 0, 720924, 20, 0, 720925, 20, 0, 786432, 20, 0, 786433, 20, 0, 786434, 22, 0, 786435, 20, 0, 786436, 11, 0, 786437, 11, 0, 786438, 11, 0, 786439, 11, 0, 786440, 11, 0, 786441, 11, 0, 786442, 11, 0, 786443, 11, 0, 786444, 1610612745, 0, 786445, 0, 0, 786446, 15, 0, 786447, 0, 0, 786448, 0, 0, 786449, 9, 0, 786450, 11, 0, 786451, 11, 0, 786452, 11, 0, 786453, 11, 0, 786454, 11, 0, 786455, 11, 0, 786456, 11, 0, 786457, 11, 0, 786458, 20, 0, 786459, 22, 0, 786460, 20, 0, 786461, 20, 0, 851968, 20, 0, 851969, 20, 0, 851970, 20, 0, 851971, 20, 0, 851972, 11, 0, 851973, 11, 0, 851974, 11, 0, 851975, 11, 0, 851976, 11, 0, 851977, 11, 0, 851978, 11, 0, 851979, 1610612745, 0, 851980, 0, 0, 851981, 2, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 9, 0, 851987, 11, 0, 851988, 11, 0, 851989, 11, 0, 851990, 11, 0, 851991, 11, 0, 851992, 11, 0, 851993, 11, 0, 851994, 20, 0, 851995, 20, 0, 851996, 20, 0, 851997, 20, 0, 917504, 21, 0, 917505, 20, 0, 917506, 20, 0, 917507, 20, 0, 917508, 11, 0, 917509, 11, 0, 917510, 11, 0, 917511, 11, 0, 917512, 11, 0, 917513, 11, 0, 917514, 1610612745, 0, 917515, 0, 0, 917516, 16, 0, 917517, 3, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 9, 0, 917524, 11, 0, 917525, 11, 0, 917526, 11, 0, 917527, 11, 0, 917528, 11, 0, 917529, 11, 0, 917530, 20, 0, 917531, 20, 0, 917532, 20, 0, 917533, 20, 0, 983040, 20, 0, 983041, 20, 0, 983042, 20, 0, 983043, 20, 0, 983044, 11, 0, 983045, 11, 0, 983046, 11, 0, 983047, 11, 0, 983048, 11, 0, 983049, 11, 0, 983050, 1610612745, 0, 983051, 0, 0, 983052, 0, 0, 983053, 3, 0, 983054, 17, 0, 983055, 0, 0, 983056, 0, 0, 983057, 1, 0, 983058, 0, 0, 983059, 9, 0, 983060, 11, 0, 983061, 11, 0, 983062, 11, 0, 983063, 11, 0, 983064, 11, 0, 983065, 11, 0, 983066, 20, 0, 983067, 20, 0, 983068, 21, 0, 983069, 20, 0, 1048576, 20, 0, 1048577, 22, 0, 1048578, 20, 0, 1048579, 20, 0, 1048580, 11, 0, 1048581, 11, 0, 1048582, 11, 0, 1048583, 11, 0, 1048584, 11, 0, 1048585, 11, 0, 1048586, 11, 0, 1048587, 1610612745, 0, 1048588, 0, 0, 1048589, 3, 0, 1048590, 2, 0, 1048591, 17, 0, 1048592, 1, 0, 1048593, 1610612736, 0, 1048594, 9, 0, 1048595, 11, 0, 1048596, 11, 0, 1048597, 11, 0, 1048598, 11, 0, 1048599, 11, 0, 1048600, 11, 0, 1048601, 11, 0, 1048602, 20, 0, 1048603, 20, 0, 1048604, 20, 0, 1048605, 20, 0, 1114112, 20, 0, 1114113, 20, 0, 1114114, 21, 0, 1114115, 20, 0, 1114116, 11, 0, 1114117, 11, 0, 1114118, 11, 0, 1114119, 11, 0, 1114120, 11, 0, 1114121, 11, 0, 1114122, 11, 0, 1114123, 11, 0, 1114124, 1610612745, 0, 1114125, 15, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 15, 0, 1114129, 9, 0, 1114130, 11, 0, 1114131, 11, 0, 1114132, 11, 0, 1114133, 11, 0, 1114134, 11, 0, 1114135, 11, 0, 1114136, 11, 0, 1114137, 11, 0, 1114138, 20, 0, 1114139, 21, 0, 1114140, 20, 0, 1114141, 22, 0, 1179648, 20, 0, 1179649, 20, 0, 1179650, 20, 0, 1179651, 20, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 22, 0, 1179675, 20, 0, 1179676, 20, 0, 1179677, 20, 0, 1245184, 20, 0, 1245185, 20, 0, 1245186, 20, 0, 1245187, 22, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 20, 0, 1245211, 20, 0, 1245212, 20, 0, 1245213, 20, 0, 1310728, 0, 0, 1310729, 0, 0 )

[node name="Stones" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 64, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 131088, 4, 0, 131328, 0, 0, 458769, 1, 0, 851980, 8, 0, 852163, 0, 0, 1114128, 1, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 2, -1073741823, 0, 3, 2, 0, 4, 2, 0, 5, 0, 0, 6, 2, 0, 7, 4, 0, 8, 2, 0, 9, 0, 0, 10, 2, 0, 11, 2, 0, 12, 1, 0, 65538, -1073741822, 0, 65548, -1610612734, 0, 131074, -1073741824, 0, 131084, -1610612736, 0, 196610, -1073741822, 0, 196620, -1610612734, 0, 262146, -1073741822, 0, 262156, -1610612734, 0, 327682, -1073741822, 0, 327692, -1610612734, 0, 393218, -1073741822, 0, 393228, -1610612734, 0, 458754, -1073741824, 0, 458764, -1610612736, 0, 524290, -1073741822, 0, 524300, -1610612734, 0, 589826, 1610612737, 0, 589827, 1610612738, 0, 589828, 1610612738, 0, 589829, 1610612736, 0, 589830, 1610612738, 0, 589831, 1610612738, 0, 589832, 1610612738, 0, 589833, 1610612736, 0, 589834, 1610612738, 0, 589835, 1610612738, 0, 589836, -1610612735, 0 )

[node name="Gate_open" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 64 )
format = 1
tile_data = PoolIntArray( 27, 1, 0 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 485, 114 )

[node name="StartGate" type="Area2D" parent="."]
position = Vector2( 424, -18 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartGate"]
position = Vector2( 58, 55.5 )
shape = SubResource( 1 )

[node name="River_collision" type="Area2D" parent="."]

[node name="Left" type="CollisionPolygon2D" parent="River_collision"]
position = Vector2( 8.69638, 0 )
scale = Vector2( 0.936845, 1 )
polygon = PoolVector2Array( 195, 67, 321, 67, 320, 127, 351, 129, 353, 157, 386, 161, 384, 202, 352, 201, 352, 234, 320, 233, 320, 312, 321, 319, 350, 319, 350, 351, 381, 353, 383, 395, 350, 395, 351, 427, 321, 428, 320, 512, 351, 512, 350, 543, 383, 541, 384, 571, 197, 576 )

[node name="Left2" type="CollisionPolygon2D" parent="River_collision"]
position = Vector2( 359.58, 2 )
scale = Vector2( 0.927029, 1 )
polygon = PoolVector2Array( 444, 64, 321, 67, 320, 127, 285, 128, 285, 159, 254, 159, 254, 202, 287, 202, 288, 231, 320, 233, 320, 312, 321, 319, 286, 320, 287, 351, 254, 353, 256, 396, 288, 398, 290, 429, 321, 428, 316, 512, 285, 513, 285, 540, 254, 545, 253, 571, 384, 571, 444, 573 )

[connection signal="body_entered" from="StartGate" to="StartGate" method="_on_Gate_body_entered"]
[connection signal="body_entered" from="River_collision" to="." method="_on_River_collision_body_entered"]
